<resources>
    <string name="app_name">BestLady</string>
    <string name="food_image">BestLadyImage</string>
    <string name="rupee_symbol">Ksh. </string>
    <string name="_0">0</string>
    <string name="updating_menu">Updating Menu</string>
    <string name="loading">Loading...</string>
    <string name="view_cart">View Cart</string>
    <string name="sort_food">Sort BestLadys</string>
    <string name="sort_price">Sort by price low to high</string>
    <string name="sort_rating">Sort by rating</string>
    <string name="sell_fish">Sell at BestLady</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="discount">Discount</string>
    <string name="cart_total">Cart Total</string>
    <string name="bill_details">Bill Details</string>
    <string name="coupon">Coupon</string>
    <string name="your_cart">Your Cart</string>
    <string name="fish_price">BestLady Price</string>
    <string name="fish_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="upload_image">Click the image icon to upload the product\'s picture</string>
    <string name="submit">Submit</string>
    <string name="my_fishes">My products</string>
    <string name="orders">Orders</string>
    <string name="check_my_products">Check My Products</string>
</resources>
